--- a/E-commerce/FRONTEND/src/index.css
+++ b/E-commerce/FRONTEND/src/index.css
@@ -2,6 +2,8 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none;
 }
 
 .active {
@@ -78,18 +80,21 @@ button:hover {
 
 /* home page */
 .productsPage {
+	max-width: 100vw;
 	display: flex;
+	flex-direction: column;
 	background-color: rgb(202, 239, 202);
-	flex-wrap: wrap;
 }
+
 .productsPage > div {
+	border: 3px solid black;
 	background-color: azure;
 	padding: 50px;
-	max-width: 500px;
 }
 
 .productCard,
 .orderProductCard,
+.orderCard,
 .cartProductCard {
 	padding: 10px;
 	display: flex;
@@ -99,6 +104,7 @@ button:hover {
 	margin: 3px;
 	flex-wrap: wrap;
 }
+.orderCard img,
 .productCard img,
 .orderProductCard img,
 .cartProductCard img,
